Refactored player overview

--- a/app/styles/parts/_edit-player.scss
+++ b/app/styles/parts/_edit-player.scss
@@ -80,7 +80,7 @@
     filter: blur(2px);
   }
 
-  .player__info {
+  .player-overview {
     .player__gamertag,
     .player__kd,
     .player__edit,
