--- a/app/styles/parts/_player.scss
+++ b/app/styles/parts/_player.scss
@@ -4,11 +4,8 @@
   position: relative;
 }
 
-.player__info {
-  position: relative;
-  background-color: #333;
-  border-top-left-radius: 1em;
-  border-top-right-radius: 1em;
+.player__content {
+  padding: $player-content-padding;
 }
 
 .player__edit {
@@ -28,23 +25,15 @@
   opacity: 0;
   animation: hint 4s;
 
-  .player__info:hover & {
+  .player-header:hover & {
     opacity: 1;
   }
 
   i {
     position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    @include align-both;
     overflow: hidden;
   }
-}
-
-@keyframes hint {
-    0% {opacity: 1;}
-    50% {opacity: 1;}
-    100% {opacity: 0;}
 }
 
 @media all and (max-width: 992px) {
@@ -54,360 +43,6 @@
 
     .player__info:hover & {
       opacity: 1;
-    }
-  }
-}
-
-@keyframes hintTouch {
-    0% {opacity: 1;}
-    50% {opacity: 1;}
-    100% {opacity: 0.6;}
-}
-
-.player__intro {
-  background-size: auto 114%;
-  background-position: 5em top;
-  border-top-left-radius: 1em;
-  border-top-right-radius: 1em;
-  position: relative;
-
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.player__flawless {
-  display: none;
-  position: absolute;
-  right: 0;
-  top: 0;
-
-  img {
-    width: 2em;
-    height: 2em;
-    border-top-right-radius: 1em;
-    border-bottom-left-radius: 1em;
-  }
-}
-
-.player__emblem {
-  width: 5em;
-  height: 5em;
-  margin-right: .5em;
-  border-top-left-radius: 1em;
-}
-
-.player__kd {
-  font-weight: normal;
-  float: right;
-  color: darken($player-card, 10%);
-  text-shadow: 0px 2px 3px rgba(0,0,0,0.5);
-  text-align: right;
-  top: 50%;
-  position: absolute;
-  right: 1em;
-  transform: translateY(-43%);
-
-  span {
-    font-size: 1.3em;
-    line-height: 1;
-  }
-
-  label {
-    font-family: 'Roboto Condensed';
-    display: block;
-    font-weight: 300;
-    font-size: .9em;
-    text-shadow: 0px 2px 3px rgba(0,0,0,0.5);
-  }
-}
-
-.player__char {
-  display: inline-block;
-  color: $player-card;
-  vertical-align: middle;
-  max-width: calc(100% - 6em);
-}
-
-.player__gamertag {
-  margin: 0;
-  font-weight: normal;
-  font-size: 1.3em;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  padding-right: 4em;
-  text-shadow: 0px 2px 3px rgba(0,0,0,0.5);
-}
-
-.player__race {
-  font-size: .9em;
-  text-shadow: 0px 1px 2px rgba(0,0,0,0.3);
-}
-
-.player__level {
-  font-size: .9em;
-  margin: 0 .5em 0 .3em;
-
-  span {
-    margin-right: .1em;
-  }
-}
-
-.player__grimoire {
-  font-size: .9em;
-  img {
-    height: 1em;
-    margin-right: .3em;
-  }
-}
-
-.player__summary {
-  > div {
-    padding: .75em 1em;
-    text-align: center;
-    box-shadow: inset 0px 10px 8px -10px rgba(0,0,0,0.75);
-  }
-
-  .highly-skilled {
-    background: #D50000;
-    color: white;
-  }
-
-  .skilled {
-    background: #F44336;
-    color: white;
-  }
-
-  .above-average {
-    background: #FF9800;
-    color: white;
-  }
-
-  .average {
-    background: #00B0FF;
-    color: white;
-  }
-
-  .below-average {
-    background: #8BC34A;
-    color: white;
-  }
-
-  .has-other-qualities {
-    background: #00C853;
-    color: white;
-  }
-}
-
-.player__main-stats {
-  padding: 1em;
-  border-top: 1px solid #eee;
-}
-
-.player__streak {
-  display: inline-block;
-  border-radius: 50%;
-  width: 11px;
-  height: 11px;
-  margin-left: .2em;
-}
-
-.player__streak--wins {
-  background: $success;
-}
-
-.player__streak--losses {
-  border: 1px solid $fail;
-  position: relative;
-
-  &:after {
-    position: absolute;
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 9px;
-    line-height: 1em;
-    letter-spacing: normal;
-    text-transform: none;
-    word-wrap: normal;
-    -webkit-font-feature-settings: 'liga';
-    -webkit-font-smoothing: antialiased;
-    content: "\e14c";
-    color: $fail;
-    top: 0px;
-    left: .5px;
-    text-align: center;
-  }
-}
-
-.player__lighthouse {
-  i {
-    font-size: .9em;
-  }
-
-  &.player__lighthouse--yes {
-    color: $success;
-  }
-
-  &.player__lighthouse--no {
-    color: $fail;
-  }
-}
-
-.player__history {
-  padding: 1em;
-  align-items: center;
-  box-shadow: inset 0px 10px 8px -10px rgba(0,0,0,0.75);
-}
-
-.player-kd {
-  padding-left: 10px;
-  width: calc(25% - 5px);
-}
-
-.player-kd__kd {
-  letter-spacing: -1px;
-  font-weight: normal;
-  font-size: 1.5em;
-  line-height: 40px;
-  position: relative;
-
-  &:before,
-  &:after {
-    position: absolute;
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 13px;
-    line-height: 1em;
-    letter-spacing: normal;
-    text-transform: none;
-    word-wrap: normal;
-    color: #bbb;
-    -webkit-font-feature-settings: 'liga';
-    -webkit-font-smoothing: antialiased;
-    left: -8px;
-    top: 50%;
-    text-align: center;
-  }
-
-  &:before {
-    transform: translate(-100%, -10px);
-    content: "\e5c7";
-  }
-
-  &:after {
-    transform: translate(-100%, -3px);
-    content: "\e5c5";
-  }
-}
-
-.player-form {
-  overflow: hidden;
-  padding-right: 0;
-  width: calc(75% + 5px);
-}
-
-.player-form__matches {
-  line-height: 43px;
-  height: 40px;
-  direction: rtl;
-  text-align: left;
-  overflow: hidden;
-  position: relative;
-  padding-right: 10px;
-
-  &:after {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: -10px;
-    transform: translateY(-50%);
-    height: 1px;
-    background: #bbb;
-    pointer-events: none;
-    content: "";
-  }
-}
-
-.player-history__label {
-  display: block;
-  font-family: 'Roboto Condensed';
-  font-weight: 300;
-  color: #999;
-  text-transform: uppercase;
-  font-size: .8em;
-  margin-bottom: 0;
-  margin-top: .3em;
-  float: none;
-  white-space: nowrap;
-}
-
-.player-history__matches {
-  flex-grow: 1;
-  overflow: hidden;
-  line-height: 36px;
-  height: 33px;
-  overflow: hidden;
-  direction: rtl;
-  position: relative;
-}
-
-.player-history__kd-label {
-  color: #666;
-  margin-right: 0;
-  margin-left: 1em;
-  font-size: .75em;
-  position: relative;
-
-  span {
-    color: #999;
-  }
-}
-
-.player-form__match {
-  display: inline-block;
-  border-radius: 50%;
-  width: 11px;
-  height: 11px;
-  opacity: 0.5;
-  vertical-align: .1em;
-  margin-left: 3px;
-  position: relative;
-  transform-origin: center center;
-  transition: transform ease .2s;
-  transition-delay: 1s;
-  will-change: transform;
-
-  &:hover {
-    opacity: 1;
-  }
-
-  &.player-form__match--win {
-    background-color: $success;
-  }
-
-  &.player-form__match--loss {
-    background-color: white;
-    border: 1px solid $fail;
-
-    &:after {
-      position: absolute;
-      font-family: 'Material Icons';
-      font-weight: normal;
-      font-style: normal;
-      font-size: 9px;
-      line-height: 1em;
-      letter-spacing: normal;
-      text-transform: none;
-      word-wrap: normal;
-      -webkit-font-feature-settings: 'liga';
-      -webkit-font-smoothing: antialiased;
-      content: "\e14c";
-      color: $fail;
-      top: 0;
-      left: .5px;
-      text-align: center;
     }
   }
 }
@@ -437,44 +72,6 @@
       border-bottom-right-radius: 1em;
     }
   }
-}
-
-.player__hazards {
-  padding: 1em;
-  white-space: nowrap;
-  overflow-x: auto;
-  border-top: 1px solid #eee;
-  line-height: 1;
-}
-
-.player-hazard {
-  background: $hazard-background;
-  color: white;
-  font-size: .8em;
-  display: inline-block;
-  padding: 1px 3px;
-  border-radius: 3px;
-  margin-right: 3px;
-  line-height: 1.3;
-  font-weight: normal;
-
-  & + .player-hazard--none {
-    display: none;
-  }
-}
-
-.player-hazard--developer {
-  background: #2196F3;
-}
-
-.player-hazard--donator {
-  background: $success;
-}
-
-.player-hazard--none {
-  border: 1px solid #B0BEC5;
-  background: white;
-  color: #B0BEC5;
 }
 
 ul[rn-carousel] {
