--- a/app/styles/elements/_stats.scss
+++ b/app/styles/elements/_stats.scss
@@ -6,14 +6,7 @@
   }
 
   label {
-    font-family: 'Roboto Condensed';
-    display: block;
-    font-weight: 300;
-    color: #999;
-    text-transform: uppercase;
-    font-size: .8em;
-    margin-bottom: 0;
-    white-space: nowrap;
+    @extend .data-label;
   }
 }
 
