--- a/app/styles/main/_typography.scss
+++ b/app/styles/main/_typography.scss
@@ -16,6 +16,26 @@
   }
 }
 
+.data-label {
+  font-family: 'Roboto Condensed';
+  display: block;
+  font-weight: 300;
+  color: #999;
+  text-transform: uppercase;
+  font-size: .8em;
+  margin-bottom: 0;
+  white-space: nowrap;
+  margin-top: .2em;
+}
+
+.success {
+  color: $success;
+}
+
+.fail {
+  color: $fail;
+}
+
 @media all and (max-width: 767px) {
   .main-title {
     text-align: center;
