--- a/app/views/player/overview.html
+++ b/app/views/player/overview.html
@@ -3,11 +3,11 @@
     <div class="player-header__title">
       <img class="player-header__emblem" ng-src="{{player.emblem}}" alt="Emblem">
       <div class="player-header__char">
-        <h2 class="player__gamertag" ng-bind="player.name"></h2>
-        <div class="player__race" ng-show="player.level && player.class.name">
-          <span class="player__type" ng-bind="player.class.name"></span>
-          <span class="player__level highlight"><span ng-bind-html="'<span>&#10022;</span>' + player.level"></span></span>
-          <span class="player__grimoire">
+        <h2 class="player-header__gamertag" ng-bind="player.name"></h2>
+        <div class="player-info" ng-show="player.level && player.class.name">
+          <span class="player-info__class" ng-bind="player.class.name"></span>
+          <span class="player-info__light highlight"><span ng-bind-html="'<span>&#10022;</span>' + player.level"></span></span>
+          <span class="player-info__grimoire">
             <img src="/images/grimoire.png" alt="Grimoire"><span ng-bind="player.grimoire"></span>
           </span>
         </div>
@@ -44,24 +44,24 @@
        <!--</div>-->
      <!--</div>-->
   </div>
-  <div class="player__history">
+  <div class="player__content player-quick-look">
     <div class="row">
-      <div class="player-form col-xs-9">
-        <div class="player-form__matches" trials-history="player.pastActivities" player-kd="player.stats.killsDeathsRatio.basic.value"></div>
-        <label class="player-history__label">Recent Form</label>
+      <div class="player-quick-look__form col-xs-9">
+        <div class="player-quick-look__form__matches" trials-history="player.pastActivities" player-kd="player.stats.killsDeathsRatio.basic.value"></div>
+        <label class="data-label">Recent Form</label>
       </div>
-      <div class="player-kd col-xs-3">
-        <div class="player-kd__kd">
+      <div class="player-quick-look__kd col-xs-3">
+        <div class="player-quick-look__kd__nr">
           <span ng-if="!player.stats.killsDeathsRatio.basic.displayValue">N/A</span>
           <span ng-if="player.stats.killsDeathsRatio.basic.displayValue"
                 ng-bind="player.stats.killsDeathsRatio.basic.displayValue">
           </span>
         </div>
-        <label class="player-history__label">K/D</label>
+        <label class="data-label">K/D</label>
       </div>
     </div>
   </div>
-  <div class="player__main-stats">
+  <div class="player-main-stats">
     <div class="row">
       <div class="col-xs-3 stat">
         <span ng-if="!player.stats.activitiesEntered.basic.value">0%</span>
@@ -75,8 +75,8 @@
         <span ng-if="player.winStreak.length"
               ng-bind="player.winStreak.length">
         </span>
-        <span class="player__streak player__streak--wins" ng-if="player.winStreak.type === 0"></span>
-        <span class="player__streak player__streak--losses" ng-if="player.winStreak.type === 1"></span>
+        <span class="match match--win player-main-stats__streak" ng-if="player.winStreak.type === 0"></span>
+        <span class="match match--loss player-main-stats__streak" ng-if="player.winStreak.type === 1"></span>
         <label>Streak</label>
       </div>
       <div class="col-xs-3 stat">
@@ -87,13 +87,13 @@
         <label>Rating</label>
       </div>
       <div class="col-xs-3 stat">
-        <span class="player__lighthouse player__lighthouse--no" ng-if="player.lighthouse !== true"><i class="material-icons">&#xE14C;</i></span>
-        <span class="player__lighthouse player__lighthouse--yes" ng-if="player.lighthouse === true"><i class="material-icons">&#xE876;</i></span>
+        <span class="player-main-stats__lighthouse fail" ng-if="player.lighthouse !== true"><i class="material-icons">&#xE14C;</i></span>
+        <span class="player-main-stats__lighthouse success" ng-if="player.lighthouse === true"><i class="material-icons">&#xE876;</i></span>
         <label>Flawless</label>
       </div>
     </div>
   </div>
-  <div class="player__hazards">
+  <div class="player-hazards">
     <div class="player-hazard" ng-class="{'player-hazard--developer' : hazard === 'Site Developer', 'player-hazard--donator' : hazard === 'Site Donator'}"
          ng-repeat="hazard in player.nonHazard track by $index" ng-bind="hazard"
          bs-popover="{content:DestinyHazardDefinition[hazard]}">
