--- a/app/styles/inc/_colors.scss
+++ b/app/styles/inc/_colors.scss
@@ -7,7 +7,7 @@ $fail: #D50000;
 
 $text-on-dark: #999;
 
-$weapons-background: #ECEFF1;
+$equipped-background: #ECEFF1;
 $last-match-background: #E8F5E9;
 $stats-background: #E8EAF6;
 $maps-background: #E0F2F1;
