--- a/app/styles/elements/_carousel.scss
+++ b/app/styles/elements/_carousel.scss
@@ -1,3 +1,28 @@
+ul[rn-carousel] {
+  padding-left: 5%;
+  padding-right: 5%;
+  margin-bottom: -3px;
+  padding-bottom: 3px;
+}
+
+ul[rn-carousel] > li {
+  position: relative;
+  margin-left: -100%;
+}
+
+ul[rn-carousel] > li:first-child {
+  margin-left: 0;
+}
+
+ul[rn-carousel] img {
+  max-width: 100%;
+}
+
+ul[rn-carousel] > li {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 @media (min-width: 768px) {
   ul[rn-carousel] > li {
     width: 50%;
