--- a/app/styles/parts/_player-weapons.scss
+++ b/app/styles/parts/_player-weapons.scss
@@ -1,24 +1,10 @@
-.weapons {
-  padding: 1em;
-  background: linear-gradient( 180deg, $weapons-background, darken($weapons-background, 5%));
-  border-bottom: 1px solid darken($weapons-background, 20%);
-}
-
-.weapon__header {
-  display: none;
-  text-align: center;
-  margin-bottom: 1em;
-  font-family: 'Roboto Condensed';
-  text-transform: uppercase;
-}
-
-.weapon-wrapper:not(:first-child) {
-  margin-top: 1em;
-}
-
 .weapon {
   display: flex;
   margin: .25em 0;
+
+  &:not(:first-child) {
+    margin-top: 1em;
+  }
 }
 
 .weapon__img {
@@ -38,14 +24,14 @@
     left: 0;
     border-width: 0 0 1.25em 2em;
     border-style: solid;
-    border-color: transparent $weapons-background;
+    border-color: transparent $equipped-background;
 
-    .weapon-wrapper:nth-child(2) & {
-      border-color: transparent darken($weapons-background, 2%);
+    .weapon:nth-child(2) & {
+      border-color: transparent darken($equipped-background, 5%);
     }
 
-    .weapon-wrapper:nth-child(3) & {
-      border-color: transparent darken($weapons-background, 4%);
+    .weapon:nth-child(3) & {
+      border-color: transparent darken($equipped-background, 8%);
     }
   }
 
@@ -56,14 +42,14 @@
     right: 0;
     border-width: 1.25em 2em 0 0;
     border-style: solid;
-    border-color: transparent darken($weapons-background, 2%);
+    border-color: transparent darken($equipped-background, 2%);
 
-    .weapon-wrapper:nth-child(2) & {
-      border-color: transparent darken($weapons-background, 3%);
+    .weapon:nth-child(2) & {
+      border-color: transparent darken($equipped-background, 7%);
     }
 
-    .weapon-wrapper:nth-child(3) & {
-      border-color: transparent darken($weapons-background, 5%);
+    .weapon:nth-child(3) & {
+      border-color: transparent darken($equipped-background, 10%);
     }
   }
 }
