--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -38,7 +38,7 @@
             </div>
           </div>
           <div class="main-search__fireteam">
-            <form ng-submit="searchPlayerbyName(mainPlayer, platformValue, 0, true)">
+            <form ng-submit="searchPlayerbyName(mainPlayer, platformValue)">
               <div class="main-search__row">
                 <div class="main-search__input">
                   <input type="text" class="form-control" placeholder="Enter profile name" ng-model="mainPlayer" ng-value="searchedPlayer">
