--- a/app/views/player/index.html
+++ b/app/views/player/index.html
@@ -1,6 +1,7 @@
 <div class="player shadow-z-1"
      ng-class="(player.isEditing || player.invalidResult) ? 'is-editing' : 'not-editing'"
-     ng-if="fireteam[0].name && $index < 3">
+     ng-if="fireteam[0].name && $index < 3"
+     ng-controller="PlayerCtrl">
 
   <div ng-include="'views/player/overview.html'"></div>
 
