Refactored last matches tab

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -39,7 +39,8 @@
 @import 'parts/player-perks';
 @import 'parts/player-armor';
 
-@import 'parts/last-match';
+// Last matches tab
+@import 'parts/player-last-matches';
 @import 'parts/player-stats';
 @import 'parts/player-maps';
 @import 'parts/edit-player';
