--- a/app/views/player/equipped.html
+++ b/app/views/player/equipped.html
@@ -1,4 +1,4 @@
-<div class="player-tab__content player-tab--equipped">
+<div class="player-tab--equipped">
   <div class="player__content player-tab__section">
     <div weapon-nodes="[player.weapons.primary, player.weapons.special, player.weapons.heavy]"></div>
   </div>
