--- a/app/views/player/index.html
+++ b/app/views/player/index.html
@@ -8,7 +8,7 @@
     <tab class="player-tab player-tab--equipped" heading="Equipped" analytics-on analytics-event="Click" analytics-category="Equipped">
       <div ng-include="'views/player/equipped.html'"></div>
     </tab>
-    <tab heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches">
+    <tab class="player-tab player-tab--last-matches" heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches">
       <div ng-include="'views/player/last-matches.html'"></div>
     </tab>
     <tab heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
