--- a/app/styles/elements/_tabs.scss
+++ b/app/styles/elements/_tabs.scss
@@ -45,50 +45,6 @@
     box-shadow: 0px 0px 8px 0 rgba(0,0,0,0.5);
   }
 
-  li:nth-child(2).active {
-    background: $last-match-background;
-
-    a,
-    a:focus,
-    a:active,
-    a:hover {
-      color: darken($last-match-background, 50%);
-    }
-
-    .my-dtr & {
-      background: $maps-background;
-
-      a,
-      a:focus,
-      a:active,
-      a:hover {
-        color: darken($maps-background, 50%);
-      }
-    }
-  }
-
-  li:nth-child(3).active {
-    background: $stats-background;
-
-    a,
-    a:focus,
-    a:active,
-    a:hover {
-      color: darken($stats-background, 50%);
-    }
-
-    .my-dtr & {
-      background: $last-match-background;
-
-      a,
-      a:focus,
-      a:active,
-      a:hover {
-        color: darken($last-match-background, 50%);
-      }
-    }
-  }
-
   .tab-content {
     height: auto;
   }
@@ -110,6 +66,21 @@
     a:active,
     a:hover {
       color: darken($equipped-background, 50%);
+    }
+  }
+}
+
+.player-tab--last-matches {
+  @include tab-background($last-matches-background);
+
+  ul &.active {
+    background: $last-matches-background;
+
+    a,
+    a:focus,
+    a:active,
+    a:hover {
+      color: darken($last-matches-background, 50%);
     }
   }
 }
