--- a/app/styles/inc/_colors.scss
+++ b/app/styles/inc/_colors.scss
@@ -8,7 +8,7 @@ $fail: #D50000;
 $text-on-dark: #999;
 
 $equipped-background: #ECEFF1;
-$last-match-background: #E8F5E9;
+$last-matches-background: #E8F5E9;
 $stats-background: #E8EAF6;
 $maps-background: #E0F2F1;
 
