--- a/app/views/player/last-matches.html
+++ b/app/views/player/last-matches.html
@@ -1,96 +1,92 @@
-<div class="last-match">
-  <div class="last-match__overview">
+<div class="player-tab--last-matches">
+  <div class="player__content player-tab__section">
     <div class="row">
-      <div class="col-xs-4" ng-repeat="match in player.recentMatches">
-        <div class="last-match__standing">
-          <span class="last-match__result last-match__result&#45;&#45;loss" ng-if="match.standing === 1"></span>
-          <span class="last-match__result last-match__result&#45;&#45;win" ng-if="match.standing === 0"></span>
-          <span class="last-match__score">
-            <span class="last-match__score--team" ng-bind="match.team_score"></span>
-            -
-            <span class="last-match__score--opponents" ng-bind="match.enemy_score"></span>
-          </span>
-          <span class="last-match__date" ng-bind="match.dateAgo"></span>
-        </div>
+      <div class="last-match__result col-xs-4" ng-repeat="match in player.recentMatches">
+        <span class="match match--loss" ng-if="match.standing === 1"></span>
+        <span class="match match--win" ng-if="match.standing === 0"></span>
+        <span class="last-match__score">
+          <span class="last-match__score--team" ng-bind="match.team_score"></span>
+          -
+          <span class="last-match__score--opponents" ng-bind="match.enemy_score"></span>
+        </span>
+        <span class="last-match__date" ng-bind="match.dateAgo"></span>
       </div>
     </div>
   </div>
-  <div class="last-match__details">
-    <div class="last-match__stats">
-      <div class="row">
-        <div class="col-xs-3 stat">
-          <span ng-bind="player.allStats.kills"></span>
-          <label>Kills</label>
-        </div>
-        <div class="col-xs-3 stat">
-          <span ng-bind="player.allStats.deaths"></span>
-          <label>Deaths</label>
-        </div>
-        <div class="col-xs-3 stat">
-          <span ng-bind="player.allStats.assists"></span>
-          <label>Assists</label>
-        </div>
-        <div class="col-xs-3 stat">
-          <span ng-bind="player.allStats.precisionKills"></span>
-          <label>Headshots</label>
-        </div>
+  <div class="player__content player-tab__section">
+    <div class="row stat-row">
+      <div class="col-xs-3 stat">
+        <span ng-bind="player.allStats.kills"></span>
+        <label>Kills</label>
       </div>
-      <div class="row">
-        <div class="col-xs-3 stat">
-          <span ng-bind="player.allStats.killsDeathsAssists | number : 2"></span>
-          <label>KA/D</label>
-        </div>
-        <div class="col-xs-3 stat">
-          <span ng-bind="player.allStats.killsDeathsRatio | number : 2"></span>
-          <label>K/D</label>
-        </div>
-        <div class="col-xs-3 stat">
-          <span ng-bind="player.allStats.resurrectionsPerformed"></span>
-          <label>Revives</label>
-        </div>
-        <div class="col-xs-3 stat">
-          <span ng-bind="player.allStats.averageLifespan | number : 0"></span>
-          <label>Lifespan</label>
-        </div>
+      <div class="col-xs-3 stat">
+        <span ng-bind="player.allStats.deaths"></span>
+        <label>Deaths</label>
+      </div>
+      <div class="col-xs-3 stat">
+        <span ng-bind="player.allStats.assists"></span>
+        <label>Assists</label>
+      </div>
+      <div class="col-xs-3 stat">
+        <span ng-bind="player.allStats.precisionKills"></span>
+        <label>Headshots</label>
       </div>
     </div>
-    <div class="last-match__weapons">
-      <div class="row">
-        <div class="last-match-weapon col-xs-12" ng-repeat="weapon in player.weaponsUsed track by $index">
-          <div class="row">
-            <div class="col-xs-6 last-weapon-weapon__descr">
-              <img class="last-match-weapon__img img-responsive" ng-src="{{getWeaponByHash(weapon.referenceId).icon}}" alt="{{getWeaponByHash(weapon.referenceId).name}}">
-              <span class="last-match-weapon__title" ng-bind="getWeaponByHash(weapon.referenceId).name"></span>
-            </div>
-            <div class="col-xs-2 stat">
-              <span ng-bind="weapon.uniqueWeaponKills"></span>
-              <label>Kills</label>
-            </div>
-            <div class="col-xs-4 stat">
-              <span ng-bind="weapon.uniqueWeaponPrecisionKills"></span>
-              <label>Headshots</label>
-            </div>
+    <div class="row stat-row">
+      <div class="col-xs-3 stat">
+        <span ng-bind="player.allStats.killsDeathsAssists | number : 2"></span>
+        <label>KA/D</label>
+      </div>
+      <div class="col-xs-3 stat">
+        <span ng-bind="player.allStats.killsDeathsRatio | number : 2"></span>
+        <label>K/D</label>
+      </div>
+      <div class="col-xs-3 stat">
+        <span ng-bind="player.allStats.resurrectionsPerformed"></span>
+        <label>Revives</label>
+      </div>
+      <div class="col-xs-3 stat">
+        <span ng-bind="player.allStats.averageLifespan | number : 0"></span>
+        <label>Lifespan</label>
+      </div>
+    </div>
+  </div>
+  <div class="player__content player-tab__section">
+    <div class="row">
+      <div class="last-match-weapon col-xs-12" ng-repeat="weapon in player.weaponsUsed track by $index">
+        <div class="row">
+          <div class="col-xs-6 last-weapon-weapon__descr">
+            <img class="last-match-weapon__img img-responsive" ng-src="{{getWeaponByHash(weapon.referenceId).icon}}" alt="{{getWeaponByHash(weapon.referenceId).name}}">
+            <span class="last-match-weapon__title" ng-bind="getWeaponByHash(weapon.referenceId).name"></span>
+          </div>
+          <div class="col-xs-2 stat">
+            <span ng-bind="weapon.uniqueWeaponKills"></span>
+            <label>Kills</label>
+          </div>
+          <div class="col-xs-4 stat">
+            <span ng-bind="weapon.uniqueWeaponPrecisionKills"></span>
+            <label>Headshots</label>
           </div>
         </div>
-        <div class="last-match-weapon last-match-weapon--{{specialWeapon.id}} col-xs-12" ng-repeat="specialWeapon in player.abilityKills track by $index"
-             ng-if="getWeaponTitle(specialWeapon.id)">
-          <div class="row">
-            <div class="col-xs-6 last-weapon-weapon__descr">
-              <span class="last-match-weapon__img" style="background-image: url('{{player.classNodes.abilities[specialWeapon.id].icon}}')"></span>
-              <span class="last-match-weapon__title" ng-bind="player.classNodes.abilities[specialWeapon.id].name"></span>
-            </div>
-            <div class="col-xs-2 stat">
-              <span ng-bind="specialWeapon.count"></span>
-              <label>Kills</label>
-            </div>
+      </div>
+      <div class="last-match-weapon last-match-weapon--{{specialWeapon.id}} col-xs-12" ng-repeat="specialWeapon in player.abilityKills track by $index"
+           ng-if="getWeaponTitle(specialWeapon.id)">
+        <div class="row">
+          <div class="col-xs-6 last-weapon-weapon__descr">
+            <span class="last-match-weapon__img" style="background-image: url('{{player.classNodes.abilities[specialWeapon.id].icon}}')"></span>
+            <span class="last-match-weapon__title" ng-bind="player.classNodes.abilities[specialWeapon.id].name"></span>
+          </div>
+          <div class="col-xs-2 stat">
+            <span ng-bind="specialWeapon.count"></span>
+            <label>Kills</label>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="last-match__medals">
+  <div class="player__content player-tab__section">
     <div class="row">
-      <div class="col-xs-2" ng-repeat="medal in player.medals track by $index"
+      <div class="col-xs-2 last-match__medal" ng-repeat="medal in player.medals track by $index"
            bs-popover="{title:DestinyMedalDefinition[medal.id].statName,content:DestinyMedalDefinition[medal.id].statDescription}">
         <img class="img-responsive" ng-src="{{'https://www.bungie.net' + DestinyMedalDefinition[medal.id].iconImage}}" alt="{{DestinyMedalDefinition[medal.id].statName}}">
       </div>
