--- a/app/views/player/index.html
+++ b/app/views/player/index.html
@@ -11,7 +11,7 @@
     <tab class="player-tab player-tab--last-matches" heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches">
       <div ng-include="'views/player/last-matches.html'"></div>
     </tab>
-    <tab heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
+    <tab class="player-tab player-tab--stats" heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
       <div ng-include="'views/player/stats.html'"></div>
     </tab>
   </tabset>
