--- a/app/styles/parts/_player-maps.scss
+++ b/app/styles/parts/_player-maps.scss
@@ -1,10 +1,14 @@
-.maps-row__header:first-child {
-  margin-top: 0em;
-}
-.maps-row__header {
-  margin-top: 1.5em;
-  margin-bottom: 0;
-  text-transform: uppercase;
-  color: #999;
-  font-family: 'Roboto Condensed';
+.player-maps {
+  .player-tab__section {
+    padding-bottom: 0;
+  }
+  
+  .stat-row__header {
+    font-size: .9em;
+    margin-top: 0;
+  }
+
+  .stat-row {
+    margin-bottom: 1em;
+  }
 }
