--- a/app/views/player/maps.html
+++ b/app/views/player/maps.html
@@ -1,5 +1,5 @@
-<div class="maps">
-  <div class="maps__specific">
+<div class="player-tab--maps player-maps">
+  <div class="player-tab__section">
     <div class="row">
       <div class="col-xs-12" ng-repeat="(key, value) in player.mapStats track by $index">
         <div class="stat-row__header">
@@ -30,7 +30,7 @@
       </div>
     </div>
   </div>
-  <div class="maps__totals">
+  <div class="player-tab__section">
     <div class="stat-row__header">
       <span>Totals</span>
     </div>
