--- a/app/views/player/stats.html
+++ b/app/views/player/stats.html
@@ -1,5 +1,5 @@
 <div class="player-tab--stats">
-  <div class="player__content player-tab__section player-stats__main">
+  <div class="player-tab__section player-stats__main">
     <div class="row stat-row">
       <div class="col-xs-4 stat">
         <span ng-bind="player.stats.kills.basic.displayValue"></span>
@@ -43,7 +43,7 @@
       </div>
     </div>
   </div>
-  <div class="player__content player-tab__section">
+  <div class="player-tab__section">
     <div class="row stat-row">
       <div class="col-xs-6 stat">
         <span ng-bind="player.stats.weaponBestType.basic.displayValue"></span>
@@ -144,7 +144,7 @@
       <!--</div>-->
     <!--</div>-->
   <!--</div>-->
-  <div class="player__content player-tab__section player-stats__bests">
+  <div class="player-tab__section player-stats__bests">
     <div class="stat-row__header">
       Character records
     </div>
