--- a/app/styles/elements/_tabs.scss
+++ b/app/styles/elements/_tabs.scss
@@ -51,6 +51,7 @@
 }
 
 .player-tab__section {
+  padding: $player-content-padding;
   border-bottom: 1px solid rgba(0, 0, 0, .1);
   box-shadow: 0 1px 0 0 rgba(255, 255, 255, .7);
 }
@@ -96,6 +97,21 @@
     a:active,
     a:hover {
       color: darken($stats-background, 50%);
+    }
+  }
+}
+
+.player-tab--maps {
+  @include tab-background($maps-background);
+
+  ul &.active {
+    background: $maps-background;
+
+    a,
+    a:focus,
+    a:active,
+    a:hover {
+      color: darken($maps-background, 50%);
     }
   }
 }
