--- a/app/views/player/index.html
+++ b/app/views/player/index.html
@@ -5,25 +5,25 @@
   <div ng-include="'views/player/overview.html'"></div>
 
   <tabset class="player-tabs" ng-if="!subdomain">
-    <tab class="player-tab player-tab--equipped" heading="Equipped" analytics-on analytics-event="Click" analytics-category="Equipped">
+    <tab class="player-tab--equipped" heading="Equipped" analytics-on analytics-event="Click" analytics-category="Equipped">
       <div ng-include="'views/player/equipped.html'"></div>
     </tab>
-    <tab class="player-tab player-tab--last-matches" heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches">
+    <tab class="player-tab--last-matches" heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches">
       <div ng-include="'views/player/last-matches.html'"></div>
     </tab>
-    <tab class="player-tab player-tab--stats" heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
+    <tab class="player-tab--stats" heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
       <div ng-include="'views/player/stats.html'"></div>
     </tab>
   </tabset>
 
   <tabset class="player-tabs" ng-if="subdomain">
-    <tab heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
+    <tab class="player-tab--stats" heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
       <div ng-include="'views/player/stats.html'"></div>
     </tab>
-    <tab heading="Maps" analytics-on analytics-event="Click" analytics-category="Maps">
+    <tab class="player-tab--maps" heading="Maps" analytics-on analytics-event="Click" analytics-category="Maps">
       <div ng-include="'views/player/maps.html'"></div>
     </tab>
-    <tab heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches">
+    <tab class="player-tab--last-matches" heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches">
       <div ng-include="'views/player/last-matches.html'"></div>
     </tab>
   </tabset>
